add loadmore func in search page

--- a/client/src/app.scss
+++ b/client/src/app.scss
@@ -1,5 +1,6 @@
 page {
   box-sizing: border-box;
   font-family: "Helvetica Neue", Helvetica, Arial, "PingFang SC", "Hiragino Sans GB", "Heiti SC", "MicrosoftYaHei", "WenQuanYi Micro Hei", sans-serif;
-  background-color: #FBFBFB;
+  background-color: #F8F8F8;
+  min-height: 100vh;
 }
