--- a/client/src/components/thumb/index.scss
+++ b/client/src/components/thumb/index.scss
@@ -1,27 +1,34 @@
-.thumb {
+.thumb-root {
   display: flex;
   margin: 16px;
   padding: 16px;
   background-color: #FFFFFF;
   border-radius: 16px;
+
+  .cover {
+    flex: 0 0 30%;
+  }
+
+  .cover_img {
+    width: 100%;
+  }
+  
+  .info {
+    padding-left: 24px;
+  }
+  
+  .title {
+    font-size: 32px;
+  }
+  
+  .author {
+    font-size: 28px;
+  }
+
+  .book-type {
+    font-size: 28px;
+  }
 }
 
-.cover {
-  flex: 0 0 30%;
-}
 
-.cover_img {
-  width: 100%;
-}
 
-.info {
-  padding-left: 24px;
-}
-
-.title {
-  font-size: 32px;
-}
-
-.author, .book-type {
-  font-size: 28px;
-}
