--- a/client/src/pages/login/index.scss
+++ b/client/src/pages/login/index.scss
@@ -7,7 +7,8 @@
 
   .logo {
     margin: 64px 0;
-    width: 20%;
+    width: 160px;
+    height: 160px;
 
     .logo-img {
       width: 100%;
@@ -24,7 +25,14 @@
     border-bottom: 2px solid rgba($color: #000000, $alpha: 0.5);
   }
 
-  Button {
+  .button-zone {
     margin-top: 80px;
   }
+
+  Button {
+    margin-bottom: 32px;
+    font-size: 36px;
+    line-height: 2;
+  }
+
 }
