--- a/client/src/components/search/index.scss
+++ b/client/src/components/search/index.scss
@@ -1,6 +1,6 @@
 .search-root {
   background-color: #FFFFFF;
-  padding: 16px 0;
+  padding: 16px 0 32px;
   
   .search-box {
     background-color: #F4F4F4;
