--- a/client/src/components/button/index.scss
+++ b/client/src/components/button/index.scss
@@ -3,8 +3,11 @@
   align-items: center;
 }
 
+.button-root-disabled {
+  color: rgba($color: #000000, $alpha: 0.6)
+}
+
 .button-icon {
-  width: 48px;
   margin-right: 24px;
   opacity: 0.5;
 }
