--- a/client/src/components/thumb/index.scss
+++ b/client/src/components/thumb/index.scss
@@ -25,10 +25,12 @@
   
   .title {
     font-size: 32px;
+    margin-bottom: 8px;
   }
   
   .author, .book-type, .return-date {
     font-size: 28px;
+    margin-bottom: 8px;
   }
 
   .del-button {
