--- a/client/src/components/button/index.scss
+++ b/client/src/components/button/index.scss
@@ -1,13 +1,14 @@
-.button-root {
+.custom-button-root {
   display: flex;
   align-items: center;
+
+  .custom-button-icon {
+    margin-right: 24px;
+    opacity: 0.5;
+  }
 }
 
-.button-root-disabled {
-  color: rgba($color: #000000, $alpha: 0.6)
+.custom-button-disabled {
+  color: rgba($color: #000000, $alpha: 0.3)
 }
 
-.button-icon {
-  margin-right: 24px;
-  opacity: 0.5;
-}
