--- a/client/src/components/button/index.scss
+++ b/client/src/components/button/index.scss
@@ -12,3 +12,15 @@
   color: rgba($color: #000000, $alpha: 0.3)
 }
 
+.clear-button-style {
+  background-color: white;
+  line-height: normal;
+  font-size: 28px;
+  margin: 0;
+  padding: 0;
+}
+
+.clear-button-style::after {
+  border: none;
+}
+
