--- a/client/src/components/header/index.scss
+++ b/client/src/components/header/index.scss
@@ -18,7 +18,7 @@
     letter-spacing: 6px;
   }
   
-  .id {
+  .id, .tips {
     font-size: 28px;
     margin-top: 8px;
     color: rgba($color: #000000, $alpha: 0.6)
