--- a/client/src/pages/index/index.scss
+++ b/client/src/pages/index/index.scss
@@ -2,45 +2,28 @@
   display: flex;
   flex-direction: column;
 
-  .action-zone, .scan, .borrowing-board {
+  .borrow-info {
     display: flex;
     flex-direction: column;
     background-color: white;
     margin-top: 48px;
   }
   
-  .action-zone, .scan {
-    padding: 0 36px;
-  }
-  
-  .header {
+  .profile {
     padding: 24px 0 16px 36px;
     background-color: white;
 
-    .custom-button {
-      position: absolute;
-      right: 36px;
-      padding: 8px 16px;
-      font-size: 28px;
-      border: 1px solid black;
+    .w-button {
+      padding: 18px; // iconSize / 2
+      margin-left: 16px;
+      border-radius: 64px; // iconSize * 2
     }
   }
-  
-  .action-name-first, .action-name-others {
-    padding: 24px 0;
-  }
-  
-  .scan-borrow, .scan-return {
-    padding: 40px 0;
-  }
-  
-  .action-name-first, .action-name-others, .scan-borrow, .scan-return {
-    letter-spacing: 8px;
-    flex: 1;
-  }
-  
-  .action-name-others, .scan-return {
-    border-top: 1px solid rgba($color: black, $alpha: 0.1); 
+
+  .fav-info {
+    .book-thumb {
+      margin-left: 36px;
+    }
   }
 }
 
