change index page

--- a/client/src/components/bookThumb/index.scss
+++ b/client/src/components/bookThumb/index.scss
@@ -1,6 +1,5 @@
 .book-thumb-root {
-  border: 1px solid green;
-  max-width: 200px;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 }
