--- a/client/src/components/columnHeader/index.scss
+++ b/client/src/components/columnHeader/index.scss
@@ -1,5 +1,5 @@
-.column-header {
-  padding: 0 24px;
+.column-header-root {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
