--- a/client/src/components/profile/index.scss
+++ b/client/src/components/profile/index.scss
@@ -2,16 +2,22 @@
   display: flex;
 
   .avatar {
-    width: 20%;
+    width: 25%;
+    border-radius: 50%;
+    overflow: hidden;
+    display: flex;
+    border: 4px solid orange;
+    .logo {
+      width: 100%;
+    }
   }
-  
-  .logo {
-    width: 100%;
+
+  .user-info, .user-button {
+    padding-top: 24px; 
+    margin-left: 24px;
   }
   
   .user-info {
-    margin-left: 24px;
-
     .username {
       font-size: 36px;
       letter-spacing: 6px;
@@ -24,12 +30,10 @@
     }
   }
 
-  .user-action {
-    // border: 1px solid orange;
+  .user-button {
     flex: auto;
     display: flex;
-    margin-left: 24px;
-    margin-right: 36px;
+    // margin-right: 16px;
     justify-content: flex-end;
   }
 }
