change admin index page

--- a/client/src/components/button/index.scss
+++ b/client/src/components/button/index.scss
@@ -14,7 +14,7 @@
 .clear-default-button-style {
   background-color: inherit;
   line-height: normal;
-  font-size: 28px;
+  font-size: inherit;
   margin: 0;
   padding: 0;
 }
