--- a/client/src/pages/index/index.scss
+++ b/client/src/pages/index/index.scss
@@ -2,17 +2,20 @@
   display: flex;
   flex-direction: column;
 
-  .borrow-info, .profile, .fav-info, .search-column {
+  .borrow-info, .profile, .fav-info, .search-column, .operation-panel {
     // border: 1px solid green;
     padding-left: 16px;
     padding-right: 16px;
-    margin-bottom: 40px;
+  }
+
+  .borrow-info, .profile, .operation-panel {
+    margin-bottom: 48px;
   }
 
   .column-header {
     margin-bottom: 8px;
     .column-title {
-      font-size: 48px;
+      font-size: 40px;
       font-weight: 900;
     }
   }
@@ -21,6 +24,7 @@
     .w-button {
       padding: 18px; // iconSize / 2
       margin-left: 16px;
+      font-size: 28px;
       border-radius: 64px; // iconSize * 2
     }
   }
@@ -34,7 +38,8 @@
 
   .search-column {
     // margin: 96px 32px 64px;
-    margin-top: 100px;
+    margin-top: 144px;
+    margin-bottom: 128px;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
@@ -43,12 +48,12 @@
     .search-box {
       background-color: #F4F4F4;
       display: flex;
-      height: 64px;
+      height: 72px;
       width: 100%;
       border-radius: 32px;
       align-items: center;
       justify-content: center;
-      font-size: 28px;
+      font-size: 32px;
       overflow: hidden;
       flex-grow: 1;
 
