type search finish & change login page style

--- a/client/src/components/listContainer/index.scss
+++ b/client/src/components/listContainer/index.scss
@@ -1,10 +1,11 @@
-.list-container {
+.list-container-root {
   display: flex;
   flex-direction: column;
+
+  .footer {
+    margin: 16px auto;
+    font-size: 24px;
+    letter-spacing: 4px;
+  }
 }
 
-.footer {
-  margin: 16px auto;
-  font-size: 24px;
-  letter-spacing: 4px;
-}
