--- a/client/src/components/favInfo/index.scss
+++ b/client/src/components/favInfo/index.scss
@@ -4,6 +4,14 @@
     zoom: 0.8;
   }
 
+  .loading {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    min-height: 256px;
+  }
+
   .fav-list-root {
     width: 100%;
 
