--- a/client/src/components/borrowInfo/index.scss
+++ b/client/src/components/borrowInfo/index.scss
@@ -1,9 +1,11 @@
 .borrow-info-root {
+
   .loading, .no-borrowing {
-    padding-top: 56px;
-    min-height: 300px;
-    width: fit-content;
-    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    min-height: 256px;
   }
 }
 
